Upgraded gradle from 7.4.2 to 7.5 (#66)
* Upgraded gradle from 7.4.2 to 7.5

* Ensure junit-pioneer can update envvars

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Josh Smith <josh@projectronin.com>